--- a/client/assets/theme/css/style.css
+++ b/client/assets/theme/css/style.css
@@ -1454,7 +1454,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
     line-height: 2;
     padding: 1.875rem;
     position: relative; }
-    .mbr-testimonial .card-block:after {
+    /* .mbr-testimonial .card-block:after {
       background-color: inherit;
       bottom: -7px;
       content: "";
@@ -1465,7 +1465,7 @@ input:-webkit-autofill, input:-webkit-autofill:hover, input:-webkit-autofill:foc
       position: absolute;
       -webkit-transform: rotate(45deg);
       transform: rotate(45deg);
-      width: 14px; }
+      width: 14px; } */
   .mbr-testimonial-lg .card-block {
     padding-bottom: 90px; }
   .mbr-testimonial .card-footer {
